--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
   <dependencies>
     <dependency>
       <groupId>com.rheagroup</groupId>
-      <artifactId>cdp4services</artifactId>
+      <artifactId>cdp4servicesdal</artifactId>
       <version>1.0.0</version>
     </dependency>
   </dependencies>
